fix: attitude simulation layout, globe table overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
 @import './index.css';
 
 #scene {
-  width: 100%;
-  height: 80vh;
   touch-action: none;
   /* float: left; */
 }
